--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser": "^5.2.11",
     "@angular/platform-browser-dynamic": "^5.2.11",
     "@angular/router": "^5.2.11",
+    "@ng-select/ng-select": "^1.6.3",
     "@types/lodash": "^4.14.112",
     "@types/wpapi": "^1.1.0",
     "animate.css": "^3.7.0",
