--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/platform-browser-dynamic": "^5.2.11",
     "@angular/router": "^5.2.11",
     "@ng-select/ng-select": "^1.6.3",
+    "@tinymce/tinymce-angular": "^2.3.3",
     "@types/lodash": "^4.14.112",
     "@types/wpapi": "^1.1.0",
     "animate.css": "^3.7.0",
