--- a/package.json
+++ b/package.json
@@ -73,12 +73,13 @@
     "toastr": "^2.1.4",
     "tsickle": "^0.35.0",
     "typeahead.js": "^0.11.1",
+    "webpack": "^3.12.0",
     "woocommerce-api": "^1.4.2",
     "wpapi": "^1.1.2",
     "zone.js": "^0.8.29"
   },
   "devDependencies": {
-    "@angular/cli": "1.6.2",
+    "@angular/cli": "^1.7.4",
     "@angular/compiler-cli": "^5.2.11",
     "@angular/language-service": "^5.2.11",
     "@types/jasmine": "~2.5.53",
