--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "morris.js": "^0.5.0",
     "multiselect": "^0.9.12",
     "oauth-1.0a": "^2.2.5",
+    "papaparse": "^5.0.0",
     "peity": "^3.3.0",
     "popper": "^1.0.1",
     "popper.js": "^1.15.0",
