Add mail commercial & logistics

--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "moment": "^2.24.0",
     "morris.js": "^0.5.0",
     "multiselect": "^0.9.12",
+    "ngx-chips": "^2.0.2",
     "oauth-1.0a": "^2.2.5",
     "papaparse": "^5.0.0",
     "peity": "^3.3.0",
