--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "my-app",
-  "version": "0.0.0",
+  "name": "freezone-dashboard",
+  "version": "1.0.0",
   "license": "MIT",
   "scripts": {
     "ng": "ng",
