--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@ng-select/ng-select": "^1.6.3",
     "@tinymce/tinymce-angular": "^2.3.3",
     "@types/lodash": "^4.14.112",
+    "@types/rsvp": "^4.0.2",
     "@types/wpapi": "^1.1.0",
     "animate.css": "^3.7.0",
     "bluebird": "^3.5.4",
@@ -68,6 +69,7 @@
     "popper.js": "^1.15.0",
     "raphael": "^2.2.8",
     "request": "^2.88.0",
+    "rsvp": "^4.8.5",
     "rxjs": "^5.5.12",
     "select2": "^4.0.6",
     "summernote": "^0.8.11",
@@ -75,6 +77,7 @@
     "toastr": "^2.1.4",
     "tsickle": "^0.35.0",
     "typeahead.js": "^0.11.1",
+    "unescape": "^1.0.1",
     "webpack": "^3.12.0",
     "woocommerce-api": "^1.4.2",
     "wpapi": "^1.1.2",
