ajor update for discount gestion

--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@types/lodash": "^4.14.112",
     "@types/rsvp": "^4.0.2",
     "@types/wpapi": "^1.1.0",
+    "adm-zip": "^0.4.13",
     "animate.css": "^3.7.0",
     "bluebird": "^3.5.4",
     "bootstrap": "^4.3.1",
@@ -56,14 +57,16 @@
     "jquery-validation": "^1.19.0",
     "jszip": "^3.2.1",
     "jvectormap": "^2.0.4",
-    "lodash": "^4.17.11",
+    "lodash": "^4.17.15",
     "metismenu": "2.7.1",
+    "mixin-deep": "^2.0.1",
     "moment": "^2.24.0",
     "morris.js": "^0.5.0",
     "multiselect": "^0.9.12",
     "ngx-chips": "^2.0.2",
     "oauth-1.0a": "^2.2.5",
     "papaparse": "^5.0.0",
+    "parsejson": "0.0.3",
     "peity": "^3.3.0",
     "popper": "^1.0.1",
     "popper.js": "^1.15.0",
@@ -72,6 +75,7 @@
     "rsvp": "^4.8.5",
     "rxjs": "^5.5.12",
     "select2": "^4.0.6",
+    "set-value": "^3.0.1",
     "summernote": "^0.8.11",
     "sweetalert2": "^8.9.0",
     "toastr": "^2.1.4",
