--- a/package.json
+++ b/package.json
@@ -37,14 +37,18 @@
     "bootstrap-tagsinput": "^0.7.1",
     "bootstrap-touchspin": "^3.1.1",
     "cd-themify-icons": "0.0.1",
+    "chart.js": "^2.9.3",
     "clipboard": "^1.7.1",
+    "clockpicker": "0.0.7",
     "core-js": "^2.6.5",
     "datatables.net-bs4": "^1.10.19",
     "datatables.net-buttons-bs4": "^1.5.6",
     "datatables.net-fixedheader-bs4": "^3.1.5",
     "datatables.net-responsive-bs4": "^2.2.3",
+    "easy-pie-chart": "^2.1.7",
     "fme-wordpress": "^2.1.2",
     "font-awesome": "^4.7.0",
+    "fullcalendar": "^3.10.1",
     "ion-rangeslider": "^2.3.0",
     "jquery": "^3.4.0",
     "jquery-minicolors": "^2.1.10",
