--- a/package.json
+++ b/package.json
@@ -66,7 +66,7 @@
     "ngx-chips": "^2.0.2",
     "oauth-1.0a": "^2.2.5",
     "papaparse": "^5.0.0",
-    "parsejson": "0.0.3",
+    "parsejson": "^0.0.3",
     "peity": "^3.3.0",
     "popper": "^1.0.1",
     "popper.js": "^1.15.0",
